--- a/aula5/ex003.html
+++ b/aula5/ex003.html
@@ -49,8 +49,20 @@
       // window.alert("Alerta!!");
       // escolha = window.confirm("Os estudos estão indo bem?");
       // window.alert(escolha);
-      nome = window.prompt("Qual o seu nome?");
-      window.alert(nome);
+      // nome = window.prompt("Qual o seu nome?");
+      // window.alert(nome);
+
+      // Sintaxe completa de parse***
+
+      // var n1 = Number.parseFloat(window.prompt("Insira um número."));
+      // var n2 = Number.parseFloat(window.prompt("Insira outro número"));
+
+      //Sintaxe abreviada
+      // var n1 = Number(window.prompt("Insira um número."));
+      // var n2 = Number(window.prompt("Insira outro número"));
+      // var soma = n1 + n2;
+      // window.alert(`${n1} + ${n2} = ${soma}`);
     </script>
+    </span>
   </body>
 </html>
